fixed li margins . image size . and footer alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 ul {
-    margin: 5px 350px;
+    margin: 5px auto;
     display: grid;
     grid-template-rows: 3fr;
     grid-template-columns: 50% 50%;
@@ -49,14 +49,15 @@ li {
 .container {
     display: grid;
     grid-template-rows: 3fr;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 500px 500px;
+    justify-content: space-around;
 }
 .projects {
     display: grid;
     grid-row-gap: 40px;
     background-size: cover;
     background-position: center;
-    margin: 10px auto;
+    margin: 5px auto;
 }
 .project-one {
     display: grid;
@@ -64,7 +65,7 @@ li {
     align-items: center;
     background-image: url(dash-project-1.jpg);
     height: 250px;
-    width: 500px;
+    width: 400px;
     grid-row: 1;
     grid-column: 1;
     border: 4px solid white;
@@ -75,7 +76,7 @@ li {
     align-items: center;
     background-image: url(dash-project-2.jpg);
     height: 250px;
-    width: 500px;
+    width: 400px;
     grid-row: 1;
     grid-column: 2;
     border: 4px solid white;
@@ -86,7 +87,7 @@ li {
     align-items: center;
     background-image: url(dash-project-3.jpg);
     height: 250px;
-    width: 500px;
+    width: 400px;
     grid-row: 2;
     grid-column: 1;
     border: 4px solid white;
@@ -97,7 +98,7 @@ li {
     align-items: center;
     background-image: url(airbnb-project.jpg);
     height: 250px;
-    width: 500px;
+    width: 400px;
     grid-row: 2;
     grid-column: 2;
     border: 4px solid white;
@@ -108,7 +109,7 @@ li {
     align-items: center;
     background-image: url(wendybite-project.jpg);
     height: 250px;
-    width: 500px;
+    width: 400px;
     grid-row: 3;
     grid-column: 1;
     border: 4px solid white;
@@ -121,12 +122,19 @@ footer {
     font-size: 30px;
     padding: 10px;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 300px 300px 300px;
     grid-template-rows: 1fr;
+    justify-content: space-around;
     grid-row: 8;
     height: 40px;
 }
 .footer-right {
+    display: grid;
+    justify-content: center;
+    grid-column: 3;
+    grid-row: 1;
+}
+.footer-center {
     display: grid;
     justify-content: center;
     grid-column: 2;
@@ -139,10 +147,10 @@ footer {
     grid-row: 1;
 }
 a:link {
-    color: white;
+    color: #ffffff;
 }
 a:visited {
-    color: #3399ff;
+    color: #ffffff;
 }
 a:hover {
     color: #80ff80;
